--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,4 @@ title: Marv's Bytes
 logo: /images/logo_main_large.png
 description: Coming Soon
 show_downloads: false
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme
+theme: minimal
