--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Marv's Bytes
-logo: /images/logo_main_large.png
+logo: images/logo_main_large.png
 description: Coming Soon
 show_downloads: false
 theme: minimal
