--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ title: Marv's Bytes
 logo: /images/logo_main_large.png
 show_downloads: false
 remote_theme: pages-themes/minimal@v0.2.0
+include: [".well-known"]
